force-app/main/default/objects/Medical_Examination__c/Medical_Examination__c.object-meta.xml
<CustomObject>
    <label>Medical Examination</label>
    <nameField>
        <displayFormat>ME-{000}</displayFormat>
        <label>Medical Examination</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Examinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>