force-app/main/default/objects/Medical_Examination__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Examinations</relationshipLabel>
    <relationshipName>Medical_Examinations</relationshipName>
    <type>Lookup</type>
</CustomField>