force-app/main/default/objects/Medical_Examination__c/fields/Alert_type__c.field-meta.xml
<CustomField>
    <fullName>Alert_type__c</fullName>
    <label>Alert type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Infection Control Alerts</fullName>
            </value>
            <value>
                <fullName>Clinical Alerts</fullName>
            </value>
            <value>
                <fullName>Non-clinical alerts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>