force-app/main/default/objects/Medical_Examination__c/fields/Allergy_Name1__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Name1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to select different allergies from the list of template Allergies.</description>
    <label>Allergy Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Allergy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Medical Examinations</relationshipLabel>
    <relationshipName>Medical_Examinations</relationshipName>
    <type>Lookup</type>
</CustomField>