force-app/main/default/objects/Medical_Examination__c/fields/Allergy_Name__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Name__c</fullName>
    <label>Allergy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>