force-app/main/default/objects/Medical_Examination__c/fields/Allergy_Status__c.field-meta.xml
<CustomField>
    <fullName>Allergy_Status__c</fullName>
    <label>Allergy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>