force-app/main/default/objects/Medical_Examination__c/fields/Blood_Glucose_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Blood_Glucose_Monitoring__c</fullName>
    <label>Blood Glucose Monitoring (mg/dl)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>