force-app/main/default/objects/Medical_Examination__c/fields/Blood_Pressure_Systolic__c.field-meta.xml
<CustomField>
    <fullName>Blood_Pressure_Systolic__c</fullName>
    <label>Blood Pressure Systolic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>