force-app/main/default/objects/Medical_Examination__c/fields/Blood_Pressure_Unit__c.field-meta.xml
<CustomField>
    <fullName>Blood_Pressure_Unit__c</fullName>
    <description>To define the Blood Pressure unit in the Vital sign</description>
    <label>Blood Pressure Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>mmHg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>