force-app/main/default/objects/Medical_Examination__c/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <formula>IF( AND( ISPICKVAL(Weight_Unit__c, &quot;lb&quot;) ,ISPICKVAL(Height_Unit__c, &quot;in&quot;)) , (Weight__c * 703) / (Height__c  ^ 2), IF(AND( ISPICKVAL(Weight_Unit__c, &quot;kg&quot;) ,ISPICKVAL(Height_Unit__c, &quot;cm&quot;)) , (Weight__c  /  Height__c / Height__c ) * 10000,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>BMI will be calculated for lbs and in &amp; kgs and cms combination only.</inlineHelpText>
    <label>BMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>