force-app/main/default/objects/Medical_Examination__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skin Allergy</fullName>
            </value>
            <value>
                <fullName>Food Allergy</fullName>
            </value>
            <value>
                <fullName>Drug Allergy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>