force-app/main/default/objects/Medical_Examination__c/fields/Coding_System__c.field-meta.xml
<CustomField>
    <fullName>Coding_System__c</fullName>
    <description>To define the Coding System</description>
    <label>Coding System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SNOMED</fullName>
            </value>
            <value>
                <fullName>LOINC</fullName>
            </value>
            <value>
                <fullName>RXNorm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>