force-app/main/default/objects/Medical_Examination__c/fields/Form_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_Unique_ID__c</fullName>
    <label>Form Unique ID</label>
    <type>TextArea</type>
</CustomField>