force-app/main/default/objects/Medical_Examination__c/fields/Form_Value__c.field-meta.xml
<CustomField>
    <fullName>Form_Value__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to connect multiple Allergies, Vitals to a single form. Used for form specific data.</description>
    <label>Form Value</label>
    <referenceTo>Form_Value__c</referenceTo>
    <relationshipLabel>Medical Examinations</relationshipLabel>
    <relationshipName>Medical_Examinations</relationshipName>
    <type>Lookup</type>
</CustomField>