force-app/main/default/objects/Medical_Examination__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Breakfast</fullName>
            </value>
            <value>
                <fullName>After Breakfast</fullName>
            </value>
            <value>
                <fullName>Before Lunch</fullName>
            </value>
            <value>
                <fullName>After Lunch</fullName>
            </value>
            <value>
                <fullName>Before Dinner</fullName>
            </value>
            <value>
                <fullName>After Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>