force-app/main/default/objects/Medical_Examination__c/fields/Glucose_Reading__c.field-meta.xml
<CustomField>
    <fullName>Glucose_Reading__c</fullName>
    <label>Glucose Reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>