force-app/main/default/objects/Medical_Examination__c/fields/Height_Unit__c.field-meta.xml
<CustomField>
    <fullName>Height_Unit__c</fullName>
    <description>To define the unit of height in the Vital sign</description>
    <label>Height Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>m</fullName>
            </value>
            <value>
                <fullName>cm</fullName>
            </value>
            <value>
                <fullName>mm</fullName>
            </value>
            <value>
                <fullName>ft</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>