force-app/main/default/objects/Medical_Examination__c/fields/Intervention__c.field-meta.xml
<CustomField>
    <fullName>Intervention__c</fullName>
    <label>Intervention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medicated as ordered</fullName>
            </value>
            <value>
                <fullName>Check in 1 hour</fullName>
            </value>
            <value>
                <fullName>Check in 2 hour</fullName>
            </value>
            <value>
                <fullName>Physician called</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>