force-app/main/default/objects/Medical_Examination__c/fields/Medical_Examination_Name__c.field-meta.xml
<CustomField>
    <fullName>Medical_Examination_Name__c</fullName>
    <label>Medical Examination Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>