force-app/main/default/objects/Medical_Examination__c/fields/Oxygen_Saturation__c.field-meta.xml
<CustomField>
    <fullName>Oxygen_Saturation__c</fullName>
    <label>SpO2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>