force-app/main/default/objects/Medical_Examination__c/fields/Pulse__c.field-meta.xml
<CustomField>
    <fullName>Pulse__c</fullName>
    <label>Pulse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>