force-app/main/default/objects/Medical_Examination__c/fields/Pulse_Unit__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Unit__c</fullName>
    <description>To define the unit of Pulse in the Vital sign</description>
    <label>Pulse Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>bpm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>