force-app/main/default/objects/Medical_Examination__c/fields/Reaction1__c.field-meta.xml
<CustomField>
    <fullName>Reaction1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to select different Reaction from the list of template Reactions.</description>
    <label>Reaction</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Reaction</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Medical Examinations (Reaction)</relationshipLabel>
    <relationshipName>Medical_Examinations2</relationshipName>
    <type>Lookup</type>
</CustomField>