force-app/main/default/objects/Medical_Examination__c/fields/Reaction__c.field-meta.xml
<CustomField>
    <fullName>Reaction__c</fullName>
    <label>Reaction Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>