force-app/main/default/objects/Medical_Examination__c/fields/Respiration__c.field-meta.xml
<CustomField>
    <fullName>Respiration__c</fullName>
    <label>Respiration Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>