force-app/main/default/objects/Medical_Examination__c/fields/Respiration_Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>Respiration_Rate_Unit__c</fullName>
    <description>To define the unit of Respiration Rate in the Vital sign</description>
    <label>Respiration Rate Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>bpm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>