force-app/main/default/objects/Medical_Examination__c/fields/Severity1__c.field-meta.xml
<CustomField>
    <fullName>Severity1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to select different Severity from the list of template Severities.</description>
    <label>Severity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Severity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Medical Examinations (Severity)</relationshipLabel>
    <relationshipName>Medical_Examinations3</relationshipName>
    <type>Lookup</type>
</CustomField>