force-app/main/default/objects/Medical_Examination__c/fields/SpO2_Unit__c.field-meta.xml
<CustomField>
    <fullName>SpO2_Unit__c</fullName>
    <description>To define the unit of SpO2 in the Vital sign</description>
    <label>SpO2 Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>