force-app/main/default/objects/Medical_Examination__c/fields/Substance1__c.field-meta.xml
<CustomField>
    <fullName>Substance1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to select different substance from the list of template Substances.</description>
    <label>Substance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Substance</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Medical Examinations (Substance)</relationshipLabel>
    <relationshipName>Medical_Examinations1</relationshipName>
    <type>Lookup</type>
</CustomField>