force-app/main/default/objects/Medical_Examination__c/fields/Substance__c.field-meta.xml
<CustomField>
    <fullName>Substance__c</fullName>
    <label>Substance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>