force-app/main/default/objects/Medical_Examination__c/fields/Substance_Code__c.field-meta.xml
<CustomField>
    <fullName>Substance_Code__c</fullName>
    <label>Substance Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>