force-app/main/default/objects/Medical_Examination__c/fields/Temperature_Unit__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Unit__c</fullName>
    <description>To define the unit of Temperature in the Vital sign</description>
    <label>Temperature Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>