force-app/main/default/objects/Medical_Examination__c/fields/Type_of_check__c.field-meta.xml
<CustomField>
    <fullName>Type_of_check__c</fullName>
    <label>Type of check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before Breakfast</fullName>
            </value>
            <value>
                <fullName>After Breakfast</fullName>
            </value>
            <value>
                <fullName>Before Brunch</fullName>
            </value>
            <value>
                <fullName>After Brunch</fullName>
            </value>
            <value>
                <fullName>Before Dinner</fullName>
            </value>
            <value>
                <fullName>After Dinner</fullName>
            </value>
            <value>
                <fullName>Before Lunch</fullName>
            </value>
            <value>
                <fullName>After Lunch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>