force-app/main/default/objects/Medical_Examination__c/fields/Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_Unit__c</fullName>
    <description>To define the unit of Weight in the Vital sign</description>
    <label>Weight Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>kg</fullName>
            </value>
            <value>
                <fullName>g</fullName>
            </value>
            <value>
                <fullName>mg</fullName>
            </value>
            <value>
                <fullName>lb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>