force-app/main/default/objects/Medical_Examination__c/recordTypes/Allergy.recordType-meta.xml
<RecordType>
    <fullName>Allergy</fullName>
    <active>true</active>
    <label>Allergy</label>
</RecordType>