force-app/main/default/objects/Medical_Examination__c/recordTypes/Glucose.recordType-meta.xml
<RecordType>
    <fullName>Glucose</fullName>
    <active>true</active>
    <label>Glucose</label>
</RecordType>