force-app/main/default/objects/Medical_Examination__c/recordTypes/Medical_Alerts.recordType-meta.xml
<RecordType>
    <fullName>Medical_Alerts</fullName>
    <active>true</active>
    <label>Medical Alerts</label>
</RecordType>