force-app/main/default/objects/Medical_Examination__c/recordTypes/Vital_Sign.recordType-meta.xml
<RecordType>
    <fullName>Vital_Sign</fullName>
    <active>true</active>
    <label>Vital Sign</label>
</RecordType>