force-app/main/default/objects/Medical_Examination__c/validationRules/End_date_cannot_be_less_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_cannot_be_less_than_today</fullName>
    <active>false</active>
    <errorConditionFormula>AND(BypassValidation__c=FALSE,DATETIMEVALUE(End_Time__c)&gt;DATETIMEVALUE(NOW()))</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>End Time cannot be greater than the Current Time.</errorMessage>
</ValidationRule>