force-app/main/default/objects/Medical_Examination__c/validationRules/EndTimeNotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>EndTimeNotBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(BypassValidation__c=FALSE,ISBLANK(End_Time__c ))</errorConditionFormula>
    <errorDisplayField>End_Time__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>