force-app/main/default/objects/Medical_Examination__c/validationRules/Enter_a_reason_for_the_cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_a_reason_for_the_cancelled</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status_of_Alert__c , &apos;Cancelled&apos;) &amp;&amp;  ISBLANK( Note__c )</errorConditionFormula>
    <errorDisplayField>Note__c</errorDisplayField>
    <errorMessage>Please  enter a reason for the cancelled.</errorMessage>
</ValidationRule>