force-app/main/default/objects/Medical_Examination__c/validationRules/Start_date_cannot_be_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_cannot_be_greater_than_today</fullName>
    <active>false</active>
    <errorConditionFormula>AND(BypassValidation__c=FALSE,(DATETIMEVALUE(Start_Time__c )  &gt; (NOW())))</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>Start date cannot be greater than today.</errorMessage>
</ValidationRule>