force-app/main/default/objects/Medical_Examination__c/validationRules/Start_date_cannot_be_less_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_date_cannot_be_less_than_today</fullName>
    <active>false</active>
    <errorConditionFormula>AND(BypassValidation__c = FALSE,Start_Time__c &lt; NOW())</errorConditionFormula>
    <errorDisplayField>Start_Time__c</errorDisplayField>
    <errorMessage>Start date cannot be less than today.</errorMessage>
</ValidationRule>